src/test/deca/context/invalid/class_pass2_10.deca
// Description:
//    test minimaliste pour induire a l erreur lors du pass 2 (declaration de methode dans la super class et class avec un type différent)
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 18/01/2025



class A {
    int p( ){return 4;}
    
}
class B extends A{
    void p(){}
}

